--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/mlhershkovitz/code_practice#readme",
   "dependencies": {
     "body": "^5.1.0",
+    "bootstrap": "^4.2.1",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
     "node": "^11.7.0",
